[package]
name = "axum-tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tower-http = { version = "0.5.2", features = ["fs"] }
tower-cookies = "0.10.0"
lazy-regex = "3.1.0"
async-trait = "0.1.77"
strum_macros = "0.26.1"
uuid = { version = "1.7.0", features = ["v4", "fast-rng"] }
serde_with = "3.6.1"

[dev-dependencies]
anyhow = "1.0.80"
httpc-test = "0.1.9"
